# market-screener-bot

./: .gitignore  CLAUDE.md  README.md  config.json  pyproject.toml  requirements.txt  skills-lock.json
.github/workflows/: screener.yml
notebooks/: strategy_screener.ipynb
scripts/: atr_fibonacci_trend.pine  stoch_rsi_combo.pine
src/screener/: __init__.py  config.py  data_fetcher.py  formatter.py  indicators.py  main.py  market_summary.py  news.py  notifier.py  strategies.py  tickers.py
src/screener/sources/: __init__.py  binance_source.py  yfinance_source.py
tests/: conftest.py  test_binance_source.py  test_formatter.py  test_indicators.py  test_main_loop.py  test_market_summary.py  test_news.py  test_notifier.py  test_strategies.py
