[project]
name = "market-screener-bot"
version = "1.0.0"
description = "Daily US stock & ETF screener with LINE notifications"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.30",
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "exchange-calendars>=4.5.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "ruff>=0.5.0"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
